--- a/style.css
+++ b/style.css
@@ -1,4 +1,198 @@
-*, *::before, *::after{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+::-webkit-inner-spin-button,
+::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.container {
+    width: 100%;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'poppins', sans-serif;
+    padding: 0 1rem;
+  background-image: linear-gradient(to left, #efede1, #393c39);
+  
+
+}
+form{
+    border: 1px solid rgb(39, 160, 53);
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+input{
+    padding: 1.5rem 1rem;
+    outline: none;
+    margin-bottom: 0.8rem;
+    border: 1px solid gainsboro;
+    border-radius: 3px;
+    /* font-size: 16px; */
+}
+
+strong{
+    color: red;
+    font-size: 10px;
+    position: absolute;
+    right: 10px;
+    font-weight: 500;
+    top: 4px;
+    display: none;
+    user-select: none;
+    cursor: help;
+}
+
+h1{
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 1.2rem;
+    color: green;
+}
+p{
+  padding: 4px 0;
+  color: black;
+}
+.num{
+    position: relative;
+}
+
+#num {
+    width: 100%;
+}
+.logo{
+    width: 20%;
+    text-align: center;
+    position: absolute;
+    right: 1px;
+    top: 12px;
+}
+
+img{
+    width: 40px;
+    height: 40px;
+    border: 1px solid red ;
+    display: none;
+    
+}
+footer{
+  width:100%;
+  background: #1d1b1b;
+  text-align: center;
+  padding: 12px;
+  color: #ebebeb;
+  margin-top: 12px;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+fieldset {
+    width: 100%;
+    padding: 2rem;
+    height: 400px;
+    background-image: linear-gradient(to top, #ebeb, #fed);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+legend {
+    color: rgb(15, 183, 234);
+    text-transform: uppercase;
+    font-size: 1.7rem;
+}
+
+input {
+    width: 100%;
+    padding: .8rem .3rem;
+    margin: 0.1rem;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid gray;
+    text-align: center;
+    font-size: 18px;
+    cursor: pointer;
+
+
+}
+
+.img {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    margin-top: 2rem;
+
+}
+
+.img p {
+    font-size: 18px;
+    color: rgb(19, 15, 15);
+}
+
+img {
+    width: 70px;
+    height: 70px;
+    border: 1px solid black;
+    object-fit: cover;
+    display: none;
+} */
+
+
+
+
+
+/* *, *::before, *::after{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -19,7 +213,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* background-color: green; */
 }
 
 .number{
@@ -28,7 +221,6 @@
     align-items: center;
     flex-direction: column;
     margin-top: 2rem;
-    /* width: 40%; */
 }
 
 .number label{
@@ -49,4 +241,4 @@
     font-size: 1rem;
     border: 3px solid #88d5e9;
     outline: none;
-}
+} */
